--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12348,6 +12348,8 @@ Samsung:
       model: 'Galaxy S20+ 5G'
     - regex: '(?:SAMSUNG-)?SM-G991(?:[0BNW]|U1)'
       model: 'Galaxy S21 5G'
+    - regex: '(?:SAMSUNG-)?SM-G998(?:[0BNUW]|U1)'
+      model: 'Galaxy S21 Ultra 5G'
     - regex: '(?:SAMSUNG-)?SM-F700(?:[0FNUW]|U1)|SCV47'
       model: 'Galaxy Z Flip'
     - regex: '(?:SAMSUNG-)?SCH-I200'
