fix(device) fixed bug in Eluga detection. + for brand Panasonic

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11294,9 +11294,7 @@ Panasonic:
       model: 'P-smart Keitai'
     - regex: 'P-03E(?:[);/ ]|$)'
       model: 'Eluga P'
-    - regex: 'Eluga[ _-]([^;/]+) Build'
-      model: 'Eluga $1'
-    - regex: 'Eluga[ _-]([^;/]+)(?:[;/)]|$)'
+    - regex: 'Eluga[ _-]([^;/)]+)(?: Build|[;)])'
       model: 'Eluga $1'
     - regex: '(DMC-CM1)'
       model: 'Lumix $1'
