--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -8984,3 +8984,22 @@
     model: U5 Lite
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; ELUGA_Y) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280
+  .101 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 87.0.4280.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Panasonic
+    model: Eluga Y
+  os_family: Android
+  browser_family: Chrome
