--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -8985,8 +8985,7 @@
   os_family: Android
   browser_family: Chrome
 -
-  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; ELUGA_Y) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280
-  .101 Mobile Safari/537.36
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; ELUGA_Y) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.101 Mobile Safari/537.36
   os:
     name: Android
     version: 8.1.0
