feat(device) detect brand Samsung models: Galaxy Z Fold 2 (SM-F9160), Galaxy Tab S7+ 12.4" WiFi (SM-T970),  Galaxy Tab A7 10.4" (2020) LTE (SM-T505), Galaxy Tab A 8.4" (2020) LTE (SM-T307U),  Galaxy Tab S7 11.0" WiFi (SM-T870), Galaxy Tab S7+ 12.4" 5G (SM-T976B)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11804,9 +11804,7 @@ Readboy:
   regex: 'Readboy[ _-]'
   device: 'tablet'
   models:
-    - regex: 'Readboy[ _-]([^;/]+) Build'
-      model: '$1'
-    - regex: 'Readboy[ _-]([^;/]+)(?:[;/)]|$)'
+    - regex: 'Readboy[ _-]([^;/)]+)(?: Build|[;)])'
       model: '$1'
 
 # Roku
@@ -12034,6 +12032,15 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-P200(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab A 8.0" with S Pen (2019) WiFi'
+    - regex: '(?:SAMSUNG-)?SM-T307U(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Galaxy Tab A 8.4" (2020) LTE'
+    - regex: '(?:SAMSUNG-)?SM-T505(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Galaxy Tab A7 10.4" (2020) LTE'
+    - regex: '(?:SAMSUNG-)?SM-T500(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Galaxy Tab A7 10.4" (2020) WiFi'
     - regex: '(?:SAMSUNG-)?SM-T11[03]'
       device: 'tablet'
       model: 'Galaxy Tab 3 7.0" Lite WiFi'
@@ -12160,6 +12167,15 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T975(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S7+ 12.4" LTE'
+    - regex: '(?:SAMSUNG-)?SM-T970(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Galaxy Tab S7+ 12.4" WiFi'
+    - regex: '(?:SAMSUNG-)?SM-T976B(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Galaxy Tab S7+ 12.4" 5G'
+    - regex: '(?:SAMSUNG-)?SM-T870(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Galaxy Tab S7 11.0" WiFi'
     - regex: '(?:SAMSUNG-)?SM-T900'
       device: 'tablet'
       model: 'Galaxy TabPRO 12.2" WiFi'
@@ -12813,7 +12829,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:F900[0FU]|F907[BN])|SCV44'
       model: 'Galaxy Fold'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SCG05'
+    - regex: '(?:SAMSUNG-)?SM-F9160|SCG05'
       model: 'Galaxy Z Fold 2'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?GT-I9060(?:[);/ ]|$)'
