feat(device) detect brand Hometech model: ALFA 10TB feat(device) detect brand Lenovo models: Tab 4 10.1" (TB-X304X), Tab P10 (TB-X705F)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8482,6 +8482,9 @@ Lenovo:
     - regex: 'TB-X605F(?:[);/ ]|$)'
       model: 'Tab M10'
       device: 'tablet'
+    - regex: 'TB-X705F(?:[);/ ]|$)'
+      model: 'Tab P10'
+      device: 'tablet'
     - regex: 'TB-7104I(?:[);/ ]|$)'
       model: 'Tab E7'
       device: 'tablet'
@@ -8545,6 +8548,9 @@ Lenovo:
       device: 'tablet'
     - regex: 'TB-8504F'
       model: 'TAB 4 8'
+      device: 'tablet'
+    - regex: 'TB-X304X'
+      model: 'Tab 4 10.1"'
       device: 'tablet'
     - regex: 'TB-X304F'
       model: 'TAB4 10'
@@ -19209,11 +19215,13 @@ eSTAR:
 
 # Hometech
 Hometech:
-  regex: '(?:Ideal (?:10S|Tab [79])|ALFA[_ ](?:10RC|10TM?|7RS|[78]RC|7M)|HT[ _](?:7RT|8MZ))(?:[);/ ]|$)'
+  regex: '(?:Ideal (?:10S|Tab [79])|ALFA10TB|ALFA[_ ](?:10RC|10TM?|7RS|[78]RC|7M)|HT[ _](?:7RT|8MZ))(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: '(Ideal (?:10S|Tab 9)|ALFA[_ ](?:10RC|10TM?|7RS|[78]RC|7M))(?:[);/ ]|$)'
+    - regex: '(Ideal (?:10S|Tab 9))(?:[);/ ]|$)'
       model: '$1'
+    - regex: 'ALFA[_ ]?(10RC|10T[BM]?|7RS|[78]RC|7M)(?:[);/ ]|$)'
+      model: 'ALFA $1'
     - regex: 'Ideal Tab 7 Ips( 3G)?'
       model: 'Ideal Tab 7 IPS$1'
     - regex: 'HT[ _](7RT|8MZ)(?:[);/ ]|$)'
