--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9308,3 +9308,57 @@
     model: Blaze Mini
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.3; MT2L03) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "4.3"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 71.0.3578.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Huawei
+    model: Ascend Mate 2
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.2.2; Z160) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 71.0.3578.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Acer
+    model: Liquid Z4 Duo
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: UCWEB/2.0 (MIDP-2.0; U; Adr 4.2.2; en-US; OPSSON_IVO_6677) U2/1.0.0 UCBrowser/9.4.0.460 U2/1.0.0 Mobile
+  os:
+    name: Android
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 9.4.0.460
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Opsson
+    model: IVO 6677
+  os_family: Android
+  browser_family: Unknown
