--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -833,7 +833,7 @@ Alba:
 
 # AllCall
 AllCall:
-  regex: 'AllCall_|Heat[34]|Rio_X(?:[);/ ]|$)|Hot ?[125][^;/]+ Build'
+  regex: 'AllCall_|Heat[34]|Rio_X(?:[);/ ]|$)|Hot ?[125][^);/]+(?: Build|\))'
   device: 'smartphone'
   models:
     - regex: 'AllCall_(Alpha|Atom|Bro|Madrid)'
@@ -852,8 +852,8 @@ AllCall:
       model: 'Heat $1'
     - regex: 'Rio_X(?:[);/ ]|$)'
       model: 'Rio X'
-    - regex: 'Hot ?([125][^;/]+) Build'
-      model: 'Hot $1'
+    - regex: 'Hot ?([125])([^);/]+)(?: Build|\))'
+      model: 'Hot $1$2'
 
 # Bravis
 Bravis:
@@ -933,7 +933,7 @@ Bravis:
 
 # Acer
 Acer:
-  regex: 'acer|(?<!Satellite |ZTE BLADE |ImSmart |ERGO |X-Style Tab )a(?:101|110|2[10]0|211|50[10]|51[10]|70[10])(?:[);/ ]|$)|Android.*V3[67]0(?:[);/ ]|$)|Android.*Z1[23456]0 Build|Android.*Z5\d{2} Build|Android.*T0[234678] Build|Android.*S55(?:[);/ ]|$)|(?:A1-(713(HD)?|7[23]4|830|841|840FHD|81[01])|A3-A[1234][01]|B1-(7[1235-8][01](HD)?|7[23]3|7A0|8[1235]0|A71|860A)|TPA60W|B3-(A[125]0|A3[02]|A40FHD)|E39)(?:[);/ ]|$)|S5[12]0 Build|(DA[0-9]+HQ?L|Aspire (?:V5-121|XC-704G|V5-573G)|Chromebook 14 \(CB3-431\)|Predator G9-793|GT-810|B1-870|B3-A4[02]|B3-A50FHD)(?:[);/ ]|$)'
+  regex: 'acer|(?<!Satellite |ZTE BLADE |ImSmart |ERGO |X-Style Tab )a(?:101|110|2[10]0|211|50[10]|51[10]|70[10])(?:[);/ ]|$)|Android.* (?:V3[67]0|Z1[2-6]0|Z5\d{2}|S55|T0[234678]|S5[12]0)(?:[);/ ]|$)|(?:A1-(713(HD)?|7[23]4|830|841|840FHD|81[01])|A3-A[1234][01]|B1-(7[1235-8][01](HD)?|7[23]3|7A0|8[1235]0|A71|860A)|TPA60W|B3-(A[125]0|A3[02]|A40FHD)|E39)(?:[);/ ]|$)|(DA[0-9]+HQ?L|Aspire (?:V5-121|XC-704G|V5-573G)|Chromebook 14 \(CB3-431\)|Predator G9-793|GT-810|B1-870|B3-A4[02]|B3-A50FHD)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # smart displays
@@ -1830,9 +1830,9 @@ Ainol:
       model: 'Novo 7 Flame'
     - regex: 'NOVO7(?:[);/ ]|$)'
       model: 'Novo 7'
-    - regex: 'Numy[ _]([^;/]+) Build'
+    - regex: 'Numy[ _]([^);/]+)(?: Build|\))'
       model: 'Numy $1'
-    - regex: 'Novo([0-9]+)[ \-]([^;/]+) Build'
+    - regex: 'Novo([0-9]+)[ \-]([^/);]+)(?: Build|\))'
       model: 'Novo $1 $2'
 
 
@@ -1851,10 +1851,10 @@ Archos:
     - regex: 'AC101BHE(?:[);/ ]|$)'
       device: 'tablet'
       model: '101B Helium 4G'
-    - regex: '(?:YL-)?Archos ([^);]*(?:PAD)[^);/]*)(?: Build|\))'
+    - regex: '(?:YL-)?Archos ([^)/;]+(?:PAD)([^);/]+)?)(?: Build|\))'
       device: 'tablet'
       model: '$1'
-    - regex: 'Archos ((?:[789]|10)[0-9]?[a-z]* ?(?:G9|G10|Helium|Titanium|Cobalt|Platinum|Xenon|Carbon|Neon|XS|IT)[^);/]+)(?: Build|\))'
+    - regex: 'Archos ((?:[789]|10)[0-9]?[a-z]* ?(?:G9|G10|Helium|Titanium|Cobalt|Platinum|Xenon|Carbon|Neon|XS|IT)(?:[^);/]+)?)(?: Build|\))'
       device: 'tablet'
       model: '$1'
     - regex: '(?:YL-)?Archos ([a-z0-9 ]+) Build'
@@ -2124,7 +2124,7 @@ Asus:
     - regex: 'P01[YZ]'
       model: 'ZenPad C 7.0'
       device: 'tablet'
-    - regex: 'P008 Build'
+    - regex: 'P008(?:[);/ ]|$)'
       model: 'ZenPad Z8'
       device: 'tablet'
     - regex: 'P001'
@@ -2136,10 +2136,10 @@ Asus:
     - regex: 'P01[VW]'
       model: 'ZenPad 7.0'
       device: 'tablet'
-    - regex: 'P024 Build|P00A'
+    - regex: '(?:P024|P00A)(?:[);/ ]|$)'
       model: 'ZenPad 8.0'
       device: 'tablet'
-    - regex: 'P01MA(?: Build|\))|P01M(?: Build|\))'
+    - regex: 'P01MA?(?:[);/ ]|$)'
       model: 'ZenPad S 8.0'
       device: 'tablet'
     - regex: 'P027'
@@ -4647,7 +4647,7 @@ Essentielb:
 
 # Rikomagic
 Rikomagic:
-  regex: 'MK(80[28])(?:[);/ ]|$)'
+  regex: 'MK(80[28](?:[^;/) ]+)?)(?:[);/ ]|$)'
   device: 'tv'
   model: 'MK$1'
 
@@ -5061,19 +5061,19 @@ Sony:
       model: 'Xperia X Performance Dual'
 
     # SONY: explicit tablet models
-    - regex: 'SGP(?:311|312|321)(?:[);/ ]|$)|SO-03E'
+    - regex: 'SGP(?:31[12]|321)(?:[);/ ]|$)|SO-03E'
       model: 'Xperia Tablet Z'
       device: 'tablet'
     - regex: 'SGP712(?:[);/ ]|$)'
       model: 'Xperia Tablet Z4'
       device: 'tablet'
-    - regex: 'SGP(?:511|512|521)(?:[);/ ]|$)|SO-05F'
+    - regex: 'SGP(?:51[12]|521)(?:[);/ ]|$)|SO-05F'
       model: 'Xperia Tablet Z2'
       device: 'tablet'
     - regex: 'SGP(?:6[124]1|612)(?:[);/ ]|$)'
       model: 'Xperia Tablet Z3 Compact'
       device: 'tablet'
-    - regex: 'SGPT(?:12|121|122|123|13|131|132|133)(?:[);/ ]|$)'
+    - regex: 'SGPT(?:12[123]?|13[123]?)(?:[);/ ]|$)'
       model: 'Xperia Tablet S'
       device: 'tablet'
 
@@ -5116,13 +5116,13 @@ Sony:
       model: '$1'
       brand: 'Sony Ericsson'
 
-    - regex: 'Sony (Tablet[^/;]*) Build'
+    - regex: 'Sony (Tablet[^)/;]*)(?: Build|\))'
       model: '$1'
       device: 'tablet'
     - regex: '(SGP[^/;]*) Build'
       model: '$1'
       device: 'tablet'
-    - regex: 'Xperia ([^/;]*Tablet[^/;]*) Build'
+    - regex: 'Xperia ([^/;]*Tablet[^)/;]*)(?: Build|\))'
       model: 'Xperia $1'
       device: 'tablet'
     - regex: 'Xperia ([^;/]+) Build'
@@ -5235,7 +5235,7 @@ Energizer:
 
 # Energy Sistem
 'Energy Sistem':
-  regex: 'ENERGY[ _-]?([^;/]+) Build'
+  regex: 'ENERGY[ _-]?([^);/]+)(?: Build|\))'
   device: 'tablet'
   model: '$1'
 
@@ -5258,10 +5258,10 @@ Etuline:
 
 # Storex
 Storex:
-  regex: "eZee[^a-z]*Tab ?([^;/]*) Build|STOREX LinkBox"
+  regex: "eZee[^a-z]*Tab ?([^);/]*)(?: Build|\))|STOREX LinkBox"
   device: 'tablet'
   models:
-    - regex: "eZee[^a-z]*Tab ?([^;/]*) Build"
+    - regex: "eZee[^a-z]*Tab ?([^);/]*)(?: Build|\))"
       model: "eZee'Tab$1"
     - regex: 'STOREX LinkBox'
       model: 'LinkBox'
@@ -5269,7 +5269,7 @@ Storex:
 
 # Evertek
 Evertek:
-  regex: '(Ever(?:Glory|Shine|Miracle|Mellow|Classic|Trendy|Fancy|Vivid|Slim|Glow|Magic|Smart|Star)[^/;]*) Build|E70[25]0HD|E805[01]HD|E9054HD|E8050HG|E7914HG'
+  regex: '(Ever(?:Glory|Shine|Miracle|Mellow|Classic|Trendy|Fancy|Vivid|Slim|Glow|Magic|Smart|Star)[^/;]*)(?: Build|\))|E70[25]0HD|E805[01]HD|E9054HD|E8050HG|E7914HG'
   device: 'smartphone'
   models:
     - regex: '(E70[25]0HD|E805[01]HD|E9054HD|E8050HG|E7914HG)'
@@ -6111,7 +6111,7 @@ Minix:
 
 # Huawei
 Huawei:
-  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))(?:[);/ ]|$))|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-(?:[AT]N00|AN90|NX9A)|GLK-(?:[AT]L00|LX1U)|JER-[AT]N10|ELS-(?:[AT]N[10]0|NX9|N39|N04)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL[02]0|LX9N)|NTS-AL00|ART-(?:[AT]L00[xm]|L29N?|L28)|JEF-(?:[AT]N00|AN20)|MED-(?:[AT]L00|LX9N?)|EBG-AN[01]0|ANA-(?:[AT]N00|NX9)|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-[AT]N(?:00a?|10)|KKG-AN00|MXW-AN00|JKM-AL00[ab]|TAH-(?:N29|AN00)m|C8817D|T1-821W|d-01[JK]|d-02[HK]|KRJ-W09|HWT31|Y320-U10|Y541-U02|VAT-L19|70[14]HW|60[58]HW|NOH-(?:NX9|AN00)|TNNH-AN00|LIO-(?:[TA]L00|[LN]29|AN00)|KOB2-[LW]09|PPA-LX2|AGS3-L09|DNN-LX9|NEY-NX9|LON-AL00|HLK-L41|503HW'
+  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))(?:[);/ ]|$))|hi6210sft|(?:PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-(?:[AT]N00|AN90|NX9A)|GLK-(?:[AT]L00|LX1U)|JER-[AT]N10|ELS-(?:[AT]N[10]0|NX9|N39|N04)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL[02]0|LX9N)|NTS-AL00|ART-(?:[AT]L00[xm]|L29N?|L28)|JEF-(?:[AT]N00|AN20)|MED-(?:[AT]L00|LX9N?)|EBG-AN[01]0|ANA-(?:[AT]N00|NX9)|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-[AT]N(?:00a?|10)|KKG-AN00|MXW-AN00|JKM-AL00[ab]|TAH-(?:N29|AN00)m|C8817D|T1-821W|d-01[JK]|d-02[HK]|KRJ-W09|HWT31|Y320-U10|Y541-U02|VAT-L19|70[14]HW|60[58]HW|NOH-(?:NX9|AN00)|TNNH-AN00|LIO-(?:[TA]L00|[LN]29|AN00)|KOB2-[LW]09|PPA-LX2|AGS3-L09|DNN-LX9|NEY-NX9|LON-AL00|HLK-L41|503HW|MT2L03)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'POT-[TA]L00a(?:[);/ ]|$)'
@@ -7821,7 +7821,7 @@ Kodak:
       model: 'IM5'
     - regex: 'Ektra(?:[);/ ]|$)'
       model: 'Ektra'
-    - regex: 'KODAK_SMARTWAY_((M|T)1)'
+    - regex: 'KODAK_SMARTWAY_([MT]1)'
       model: 'Smartway $1'
     - regex: 'SMARTWAY X1'
       model: 'Smartway X1'
@@ -10016,7 +10016,7 @@ Motorola:
       model: 'DROID $1'
     - regex: 'portalmmm/2.0 ((?:E378i|L6|L7|V3)[a-z0-9]+)'
       model: '$1'
-    - regex: '(XOOM [^;/]*)Build'
+    - regex: '(XOOM [^);/]*)(?: Build|\))'
       device: 'tablet'
       model: '$1'
     - regex: '(MZ[0-9]{3})(?:[);/ ]|$)'
@@ -10134,7 +10134,7 @@ MyWigo:
 
 # Myria
 Myria:
-  regex: ' (Myria_[^/;]+|502M|Cozy|Easy tab 9|Grand) Build|Myria_FIVE|Myria_Grand_4G|Myria_Wide_2|Myria_Wide_4G'
+  regex: ' (Myria_[^/);]+|502M|Cozy|Easy tab 9|Grand) Build|Myria_FIVE|Myria_Grand_4G|Myria_Wide_2|Myria_Wide_4G'
   device: 'smartphone'
   models:
     - regex: 'Myria_([^/;]+) Build'
@@ -10350,11 +10350,11 @@ NGM:
   regex: 'NGM[_ ][a-z0-9]+|(Forward|Dynamic)[ _]?[^/;]+(?:Build|/)'
   device: 'smartphone'
   models:
-    - regex: '(Forward|Dynamic)[ _]?([^/;]+) Build'
+    - regex: '(Forward|Dynamic)[ _]?([^)/;]+)(?: Build|\))'
       model: '$1 $2'
     - regex: '(Forward|Dynamic)[ _]?([^/;]+)/'
       model: '$1 $2'
-    - regex: 'NGM ([^;/]+) Build'
+    - regex: 'NGM ([^);/]+)(?: Build|\))'
       model: '$1'
     - regex: 'NGM_([a-z0-9]+)'
       model: '$1'
@@ -10787,7 +10787,7 @@ OnePlus:
       model: '6'
     - regex: 'A601[03](?:[);/ ]|$)'
       model: '6T'
-    - regex: '(?:du_)?ONEPLUS ?([^;/]+) Build'
+    - regex: '(?:du_)?ONEPLUS ?([^);/]+)(?: Build|\))'
       model: '$1'
 
 # Realme (sub brand Oppo)
@@ -11008,7 +11008,7 @@ OPPO:
       model: 'Find X2 Lite'
     - regex: '(?:OPPO[ _]?)?(?:PDEM30|OPG01|CPH2025)(?:[);/ ]|$)'
       model: 'Find X2 Pro'
-    - regex: '(?:OPPO[ _]?)?R1011 Build'
+    - regex: '(?:OPPO[ _]?)?R1011(?:[);/ ]|$)'
       model: 'Joy Plus'
     - regex: '(?:OPPO[ _]?)?(PBC(?:M30|T10))(?:[);/ ]|$)'
       model: 'K1'
@@ -11137,9 +11137,9 @@ Opsson:
   models:
     - regex: 'IUSAI[ _]([^/;]+) Build'
       model: 'Iusai $1'
-    - regex: 'IUSAI[ _]([^/;\)]+)[/;\)]'
+    - regex: 'IUSAI[ _]([^)/;)]+)'
       model: 'Iusai $1'
-    - regex: 'Opsson[ _]([^/;]+) Build'
+    - regex: 'Opsson[ _-]([^)/;]+)(?: Build|\))'
       model: '$1'
     - regex: '(?:Opsson-)?Opsson[ -_]([^/;]+)/'
       model: '$1'
@@ -11191,7 +11191,7 @@ Oukitel:
 
 # Ouki
 Ouki:
-  regex: 'OUKI|OK[AU][0-9]+[a-z]* Build'
+  regex: 'OUKI|OK[AU][0-9]+[a-z]*(?: Build|\))'
   device: 'smartphone'
   models:
     - regex: 'OUKI[ _-]?([^;/]+) Build'
@@ -11200,7 +11200,7 @@ Ouki:
       model: '$1'
     - regex: 'OUKI[ _-]?([^;/)]+)(?:[;/)]|$)'
       model: '$1'
-    - regex: '(OK[AU][0-9]+[a-z]*) Build'
+    - regex: '(OK[AU][0-9]+[a-z]*)(?: Build|\))'
       model: '$1'
 
 # Overmax
@@ -11381,9 +11381,9 @@ Pentagram:
       device: 'smartphone'
     - regex: 'Quadra ?([^);/]*) Build'
       model: 'Quadra $1'
-    - regex: 'Pentagram ?TAB ?([^);/]*) Build'
+    - regex: 'Pentagram ?TAB ?([^);/]*)(?: Build|\))'
       model: 'Tab $1'
-    - regex: 'Pentagram ?([^);/]*) Build'
+    - regex: 'Pentagram ?([^);/]*)(?: Build|\))'
       model: '$1'
       device: 'smartphone'
 
@@ -11614,7 +11614,7 @@ ProScan:
 
 # RCA Tablets (RCA)
 'RCA Tablets':
-  regex: 'RCT([^;/]+) Build|RCA RLTP4028|RCT6513W87|RCT6973W43(?:MD)?|RCT6703W12|RCT6A06P22|RCT6303W87(?:DK|M)|RCT6773W22B|RCT6203W46L|RCT6873W42M|RCT6K03W13'
+  regex: 'RCT[0-9]{4}|RCA RLTP4028|RCT6513W87|RCT6973W43(?:MD)?|RCT6703W12|RCT6A06P22|RCT6303W87(?:DK|M)|RCT6773W22B|RCT6203W46L|RCT6873W42M|RCT6K03W13'
   device: 'smartphone'
   models:
     - regex: 'RCA RLTP4028'
@@ -11643,7 +11643,7 @@ ProScan:
     - regex: 'RCT6303W87(?:DK|M)|RCT6K03W13'
       device: 'tablet'
       model: 'Viking Pro 10.0"'
-    - regex: 'RCT([^;/]+) Build'
+    - regex: 'RCT([^);/]+)(?: Build|\))'
       device: 'tablet'
       model: 'RCT$1'
 
@@ -12984,13 +12984,13 @@ Smartfren:
     - regex: 'New Andromax-i'
       model: 'New Andromax I'
 
-    - regex: 'Andromax[ _\-]([^/;]+) Build'
+    - regex: 'Andromax[ _\-]([^)/;]+)(?: Build|\))'
       model: 'Andromax $1'
     - regex: 'Andromax[ _\-]([a-z0-9]+)'
       model: 'Andromax $1'
-    - regex: 'Smartfren[ _\-]([^/;\)]+)(?: Build|[/;\)])'
+    - regex: 'Smartfren[ _\-]([^)/;]+)(?: Build|\))'
       model: '$1'
-    - regex: '(Androtab[^/;)]+) Build'
+    - regex: '(Androtab[^)/;]+)(?: Build|\))'
       model: '$1'
       device: 'tablet'
 
@@ -13556,7 +13556,7 @@ Turbo-X:
       device: 'tablet'
       model: 'Hive V 3G'
 
-    - regex: 'Turbo-X Tablet([^;/]+) Build'
+    - regex: 'Turbo-X Tablet([^);/]+)(?: Build|\))'
       device: 'tablet'
       model: 'Tablet$1'
     - regex: 'Turbo-X ([^;/]+) Build'
@@ -13964,7 +13964,11 @@ Teclast:
   regex: 'Teclast|TLA002|TLA016|X98 Air III|M20_4G|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|(?:T30|P80X|P20HD)_(?:ROW|EEA)|T10\(E3C6\)|P10S\(N4H5\)|98\(M1E[45789]\)|98\(M3E3\)'
   device: 'tablet'
   models:
-    - regex: 'Tbook[_ -]([^;/]+) Build'
+    - regex: 'Tbook[_ -](1[06]) S(\([^;)]+\))'
+      model: 'Tbook $1S $2'
+    - regex: 'Tbook[_ -]([^(]+)(\([^;)]+\))'
+      model: 'Tbook $1 $2'
+    - regex: 'Tbook[_ -]([^);/]+)(?: Build|\))'
       model: 'Tbook $1'
     - regex: 'T10\(E3C6\)'
       model: 'T10'
@@ -14051,9 +14055,9 @@ TechPad:
       model: '3Gx'
     - regex: 'Dual C1081HD'
       model: 'XTAB C1081HD'
-    - regex: 'XTAB[ _-]([^/;]+) Build'
+    - regex: 'XTAB[ _-]([^)/;]+)(?: Build|\))'
       model: 'XTAB $1'
-    - regex: 'Tech ?pad[ _-]([^/;)]+)(?: Build|[;)])'
+    - regex: 'Tech ?pad[ _-]([^)/;]+)(?: Build|\))'
       model: '$1'
       device: 'smartphone'
 
@@ -14069,7 +14073,7 @@ Tesco:
 
 # teXet
 teXet:
-  regex: 'Texet|(NaviPad [^/;]*) Build|TM-(?:1046|1058|1057|1067|3000|3200R|3500|4003|4071|450[34]|451[30]|4377|4082R|508[34]|550[358]|5010|5017|507[4-7]|5[23]77|6003|6906|702[13]|7055HD|709[69]|9747BT|9758|9751HD|9767|5513|520[410]|507[13]|558[134]|570[23]|7859|8044|9748[ _]3G|9720|7047HD[ _]3G|9757|9740|4982|4515|4083|500[3567]|5571|3204R|5016|8043|7047HD[ _]3G|8041HD|8066|705[23]|7041|8041HD|8051|8048|974[96]|973[78]W|974[170]|9743W|9750HD|7043XD|7049|7887|7037W|702[46])|TB-(771A|711A)|X-Force[\(-]?TM-5009\)?|X-Plus[\(-]?TM-5577\)?|TM_5011|X-pad (?:AIR 8|iX 7|NAVI 7.[35]|NAVI 10|SKY 8.1|STYLE 8|STYLE 10.1|HIT|LITE 7.[12]|QUAD (?:7.2|10|7)|SHINE 8.1)(?: 3G)?'
+  regex: 'Texet|(NaviPad [^)/;]*)(?: Build|\))|TM-(?:1046|1058|1057|1067|3000|3200R|3500|4003|4071|450[34]|451[30]|4377|4082R|508[34]|550[358]|5010|5017|507[4-7]|5[23]77|6003|6906|702[13]|7055HD|709[69]|9747BT|9758|9751HD|9767|5513|520[410]|507[13]|558[134]|570[23]|7859|8044|9748[ _]3G|9720|7047HD[ _]3G|9757|9740|4982|4515|4083|500[3567]|5571|3204R|5016|8043|7047HD[ _]3G|8041HD|8066|705[23]|7041|8041HD|8051|8048|974[96]|973[78]W|974[170]|9743W|9750HD|7043XD|7049|7887|7037W|702[46])|TB-(771A|711A)|X-Force[\(-]?TM-5009\)?|X-Plus[\(-]?TM-5577\)?|TM_5011|X-pad (?:AIR 8|iX 7|NAVI 7.[35]|NAVI 10|SKY 8.1|STYLE 8|STYLE 10.1|HIT|LITE 7.[12]|QUAD (?:7.2|10|7)|SHINE 8.1)(?: 3G)?'
   device: 'tablet'
   models:
     - regex: 'TM-9749'
@@ -14082,10 +14086,8 @@ teXet:
       model: 'X-Force 10 3G'
     - regex: 'TM-8048'
       model: 'X-pad Force 8 3G'
-    - regex: '(NaviPad [^/;]*) Build'
-      model: '$1'
     - regex: 'TM-7055HD'
-      model: 'NaviPad 3G'
+      model: 'NaviPad TM-7055HD 3G'
     - regex: 'TM-9758'
       model: 'X-pad Style 10.0"'
     - regex: 'X-pad SHINE 8.1 3G'
@@ -14126,6 +14128,10 @@ teXet:
       model: 'NaviPad TM-7887 3G'
     - regex: 'TM-8066'
       model: 'X-pad Rapid 8.2" 4G'
+
+    - regex: '(NaviPad [^/;]*)(?: Build|\))'
+      model: '$1'
+
     - regex: '(TM-(?:1057|1067|6906|8043|9748[_ ]3G|9740|9757(?:[_ ]3G)?|7047HD[ _]3G|9747BT|9751HD|702[13]|705[23]|7041|9720|7047HD[_ ]3G|8044|8041HD|973[78]W|9743W|974[710]|9750HD|7043XD|7037W|702[46])|TB-(?:771A|711A|8041HD))'
       model: '$1'
     - regex: 'TM-4503'
@@ -14302,7 +14308,7 @@ Tooky:
 
 # Tolino
 Tolino:
-  regex: 'Tolino Tab ([^/;]+) Build'
+  regex: 'Tolino Tab ([^)/;]+)(?: Build|\))'
   device: 'tablet'
   model: 'Tolino Tab $1'
 
@@ -14601,10 +14607,10 @@ ViewSonic:
     - regex: 'ViewSonic A8\+(?:[);/ ]|$)'
       model: 'A8 Plus'
       device: 'smartphone'
-    - regex: '(?:ViewSonic-)?ViewPhone ?([^;/]+) Build'
+    - regex: '(?:ViewSonic-)?ViewPhone ?([^);/]+)(?: Build|\))'
       model: 'ViewPhone $1'
       device: 'smartphone'
-    - regex: '(?:ViewSonic-)?ViewPad ?([^;/]+) Build'
+    - regex: '(?:ViewSonic-)?ViewPad ?([^);/]+)(?: Build|\))'
       model: 'ViewPad $1'
       device: 'tablet'
     - regex: '(VSD[0-9]+)(?:[);/ ]|$)'
@@ -14722,7 +14728,7 @@ Vestel:
     - regex: 'VTAB10'
       model: 'VTab 10'
       device: 'tablet'
-    - regex: 'V_TAB_7_ECO_III '
+    - regex: 'V_TAB_7_ECO_III(?:[);/ ]|$)'
       model: 'VTab 7 Eco 3'
       device: 'tablet'
     - regex: 'V_TAB_([0-9]{4}[A-Z]?)'
@@ -14990,7 +14996,7 @@ Walton:
   regex: 'Walton|Walpad|Primo[ _](C[1234]?|D[1-68]|E[1-58]|EF[23]?|EM|F[1-7]i?|G[1-7]|GF[234]?|GH[23]?|GM|H[2346]|HM|N|N1|NF|NX2?|R[12346]|RH2?|RM2?|RX[23]?|S[123456]|V1|X[1234]|Z|ZX)'
   device: 'smartphone'
   models:
-    - regex: 'Walpad ([^;/]+) Build'
+    - regex: 'Walpad ([^);/]+)(?: Build|\))'
       device: 'tablet'
       model: 'Primo Walpad $1'
     - regex: 'Primo S6 infinity'
@@ -15480,10 +15486,10 @@ Xiaomi:
     - regex: 'HM NOTE 1W(?:[);/ ]|$)'
       device: 'phablet'
       model: 'Redmi Note'
-    - regex: 'HM NOTE 1TD (?:Build|MIUI)'
+    - regex: 'HM NOTE 1TD(?:[);/ ]|$)'
       device: 'phablet'
       model: 'Hongmi Note 1TD'
-    - regex: 'HM NOTE 1(?:LTE|S)(?:W|GLOBAL|TD)? (?:Build|MIUI)|HM NOTE 1LTE'
+    - regex: 'HM NOTE 1(?:LTE|S)(?:W|GLOBAL|TD)?(?:[);/ ]|$)'
       device: 'phablet'
       model: 'Redmi Note 4G'
     - regex: 'Redmi Note 5A Prime'
@@ -16755,21 +16761,21 @@ Zync:
   models:
     - regex: '(Z18|Z99 Dual Core|Z99[_ ][23]G|Z99|Z900[_ ]Plus|Z909|Z930[+]|Z930)'
       model: '$1'
-    - regex: '(Z1000[^/;]+)Build'
+    - regex: '(Z1000(?:[^)/;]+)?)(?: Build|\))'
       model: '$1'
     - regex: 'Cloud (Z5)'
       model: 'Cloud $1'
-    - regex: 'ZYNC Cloud[ _]([^;]+)Build'
+    - regex: 'ZYNC Cloud[ _]([^);/]+)(?: Build|\))'
       model: 'Cloud $1'
-    - regex: 'ZYNC[ _]([^;]+)Build'
+    - regex: 'ZYNC[ _]([^);/]+)(?: Build|\))'
       model: '$1'
 
 # Lemhoov
 Lemhoov:
-  regex: 'Lemhoov'
+  regex: 'Lemhoov[ _-]'
   device: 'smartphone'
   models:
-    - regex: 'Lemhoov[ _-]([^/;]+) Build'
+    - regex: 'Lemhoov[ _-]([^)/;]+)(?: Build|\))'
       model: '$1'
 
 # MTC (MTS)
