fix: Ultimate, Ulitmate for brand Lark

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8196,7 +8196,7 @@ Lark:
       model: 'FreeMe X4 9'
     - regex: '(?:Lark[ _-])?Evolution[ _](X2 7 3G-GPS|X4[_ ]10\.1|10|X4[_ ]7[ _]IPS)'
       model: 'Evolution $1'
-    - regex: 'Ul[ti]{2}mate (X4 10\.1 3G IPS|X4 8s 3G|7i)'
+    - regex: 'Ul(?:ti|it)mate (X4 10\.1 3G IPS|X4 8s 3G|7i)'
       model: 'Ultimate $1'
     - regex: 'PHABLET 7'
       model: 'Phablet 7'
