fix: failed tests -61~

--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -158,7 +158,7 @@
   device:
     type: tablet
     brand: Le Pan
-    model: TC970 (Wi-Fi)
+    model: TC970 WiFi
   os_family: Android
   browser_family: Android Browser
 - 
