--- a/Tests/fixtures/tablet-4.yml
+++ b/Tests/fixtures/tablet-4.yml
@@ -6276,7 +6276,7 @@
   device:
     type: tablet
     brand: Teclast
-    model: Tbook 16 Power(M5F8)
+    model: Tbook 16 Power (M5F8)
   os_family: Android
   browser_family: Opera
 - 
@@ -7511,7 +7511,7 @@
   device:
     type: tablet
     brand: teXet
-    model: NaviPad 3G
+    model: NaviPad TM-7055HD 3G
   os_family: Unknown
   browser_family: Unknown
 - 
@@ -8968,5 +8968,23 @@
     type: tablet
     brand: Vonino
     model: Onyx QS
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; P70221) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 81.0.4044.138
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: MicroMax
+    model: Canvas Tab
   os_family: Android
   browser_family: Chrome
