--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -744,7 +744,7 @@ Apple:
 
 # micromax
 MicroMax:
-  regex: '(?:MicroMax[ \-\_]?[a-z0-9]+|Q327)|4560MMX|P70221 Build|(?:YU(?:5040|5530)|AQ5001(?: Canvas Power)?)(?:[);/ ]|$)'
+  regex: '(?:MicroMax[ \-\_]?[a-z0-9]+|Q327)|4560MMX|P70221|(?:YU(?:5040|5530)|AQ5001(?: Canvas Power)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'AQ5001 Canvas Power'
@@ -755,7 +755,7 @@ MicroMax:
       model: '4560MMX'
     - regex: 'E481'
       model: 'Canvas 5'
-    - regex: 'P70221 Build'
+    - regex: 'P70221(?:[);/ ]|$)'
       model: 'Canvas Tab'
       device: 'tablet'
     - regex: 'Q327'
@@ -8215,13 +8215,13 @@ LCT:
 
 # Le Pan
 'Le Pan':
-  regex: 'Le ?Pan|TC970 ([^;/]+)Build'
+  regex: 'Le ?Pan|TC970(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'TC802A'
       model: 'Le Pan Mini'
-    - regex: 'TC970 ([^;/]+)Build'
-      model: 'TC970 $1'
+    - regex: 'TC970(?:[);/ ]|$)'
+      model: 'TC970 WiFi'
     - regex: 'Le ?Pan ?(II|S)(?:[);/ ]|$)'
       model: 'Le Pan $1'
     - regex: 'Le ?Pan ?([^;/]+) Build'
@@ -8323,11 +8323,16 @@ Lephone:
     - regex: 'lephone_W7_plus'
       model: 'W7 Plus'
 
-# lenco
+# lenco (lenco.com)
 Lenco:
-  regex: 'Lenco ([^/;]*) Build'
+  regex: 'Lenco ([^)/;]*)(?: Build|\))'
   device: 'tablet'
-  model: '$1'
+  models:
+    - regex: 'LENCO Diverso-700'
+      device: 'portable media player'
+      model: 'Diverso 700'
+    - regex: 'Lenco ([^)/;]*)(?: Build|\))'
+      model: '$1'
 
 # lenovo (lenovo.com)
 Lenovo:
@@ -9561,10 +9566,10 @@ Meitu:
 
 # Memup
 Memup:
-  regex: 'SlidePad ?([^;/]*) Build|SPNG?[0-9]{2,4}[a-z]{0,2}(?:[);/ ]|$)|SP704CE?|SP-NG708-3G'
+  regex: 'SlidePad|SPNG?[0-9]{2,4}[a-z]{0,2}(?:[);/ ]|$)|SP704CE?|SP-NG708-3G'
   device: 'tablet'
   models:
-    - regex: 'SlidePad ?([^;/]*) Build'
+    - regex: 'SlidePad ?([^);/]*)(?: Build|\))'
       model: 'SlidePad $1'
     - regex: 'SPNG([0-9]{2,4}[a-z]{0,2})(?:[);/ ]|$)'
       model: 'SlidePad NG$1'
@@ -9572,6 +9577,8 @@ Memup:
       model: 'SlidePad NG$1 3G'
     - regex: 'SP704(CE?)'
       model: 'SlidePad 704$1'
+    - regex: 'SlidePad(?: Build|\))'
+      model: 'SlidePad'
 
 # Mecer
 Mecer:
@@ -9825,7 +9832,7 @@ Modecom:
       model: 'Xino Z$1 X$2'
       device: 'smartphone'
 
-    - regex: 'FreeTab[ _\-]?([^/;]+)? Build'
+    - regex: 'FreeTab[ _\-]?([^)/;]+)(?: Build|\))'
       model: 'FreeTab $1'
     - regex: 'FreeTab[ _\-]?((?!Build)[^);/ ]+)?'
       model: 'FreeTab $1'
@@ -9846,7 +9853,7 @@ Mofut:
 
 # motorola
 Motorola:
-  regex: 'MOT(?!TO)|(?<!AN)DROID ?(?:Build|[a-z0-9]+)|portalmmm/2.0 (?:E378i|L6|L7|v3)|XOOM [^;/]*Build|XT1941-2|XT1924-9|XT1925-10|XT1965-6|XT1970-5|XT1799-2|XT1021|XT1710-08|XT180[3-5]|XT194[23]-1|XT1929-15|(?:XT|MZ|MB|ME)[0-9]{3,4}[a-z]?(?:\(Defy\)|-0[1-5])?(?:[;]? Build|\))'
+  regex: 'MOT(?!TO)|(?<!AN)DROID ?(?:Build|[a-z0-9]+)|portalmmm/2.0 (?:E378i|L6|L7|v3)|XOOM[^);/]*(?: Build|\))|XT1941-2|XT1924-9|XT1925-10|XT1965-6|XT1970-5|XT1799-2|XT1021|XT1710-08|XT180[3-5]|XT194[23]-1|XT1929-15|(?:XT|MZ|MB|ME)[0-9]{3,4}[a-z]?(?:\(Defy\)|-0[1-5])?(?:[;]? Build|\))'
   device: 'smartphone'
   models:
     # Explicit feature phone models
@@ -10019,6 +10026,9 @@ Motorola:
     - regex: '(XOOM [^);/]*)(?: Build|\))'
       device: 'tablet'
       model: '$1'
+    - regex: 'Xoom(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Xoom'
     - regex: '(MZ[0-9]{3})(?:[);/ ]|$)'
       device: 'tablet'
       model: '$1'
@@ -10062,12 +10072,6 @@ MyPhone:
   device: 'smartphone'
   models:
     # explicit table models
-    - regex: 'MyPad[ _]([^;/]+) Build'
-      model: 'MyPad $1'
-      device: 'tablet'
-    - regex: 'MyTab[ _]([^;/]+) Build'
-      model: 'MyTab $1'
-      device: 'tablet'
     - regex: 'myTab_10III'
       model: 'MyTab 10 III'
       device: 'tablet'
@@ -10121,7 +10125,13 @@ MyPhone:
       model: 'myXI3'
 
     # general detections
-    - regex: 'MyPhone[ _]([^;/)]+)( Build|\))'
+    - regex: 'MyPad[ _]([^);/]+)(?: Build|\))'
+      device: 'tablet'
+      model: 'MyPad $1'
+    - regex: 'MyTab[ _]([^);/]+)(?: Build|\))'
+      device: 'tablet'
+      model: 'MyTab $1'
+    - regex: 'MyPhone[ _]([^;/)]+)(?: Build|\))'
       model: '$1'
 
 # MyWigo
@@ -10134,11 +10144,9 @@ MyWigo:
 
 # Myria
 Myria:
-  regex: ' (Myria_[^/);]+|502M|Cozy|Easy tab 9|Grand) Build|Myria_FIVE|Myria_Grand_4G|Myria_Wide_2|Myria_Wide_4G'
+  regex: 'Myria_[^)/;]+| (502M|Cozy|Easy tab 9|Grand)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'Myria_([^/;]+) Build'
-      model: '$1'
     - regex: 'Myria_FIVE'
       model: 'Five'
     - regex: '(502M|Grand)'
@@ -10149,9 +10157,12 @@ Myria:
       model: 'Wide 4G'
     - regex: 'Myria_Wide_2'
       model: 'Wide 2'
-    - regex: '(Cozy|Easy tab 9)'
+    - regex: '(Cozy|Easy tab 9)(?:[);/ ]|$)'
       model: '$1'
       device: 'tablet'
+
+    - regex: 'Myria_([^)/;]+)(?: Build|\))'
+      model: '$1'
 
 # M.T.T.
 M.T.T.:
@@ -14447,7 +14458,7 @@ Unimax:
 
 # Unowhy
 Unowhy:
-  regex: 'QOOQ '
+  regex: 'QOOQ(?:[);/ ]|$)'
   device: 'tablet'
   model: 'QOOQ'
 
@@ -15341,7 +15352,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^)/;]+)(?: Build| MIUI|\))|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G)|M2007J1SC|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2006C3MII|M2003J15SC|M2007J3S[CYG]|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^)/;]+)(?: Build| MIUI|\))|(?:2014501|2014011|201481[12378]|201302[23]|2013061)(?: Build| MIUI|\))|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G)|M2007J1SC|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2006C3MII|M2003J15SC|M2007J3S[CYG]|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -15361,17 +15372,17 @@ Xiaomi:
       model: 'Black Shark 3 Pro 5G'
     - regex: '(?:SHARK )?MBU-A0'
       model: 'Black Shark 3 Pro'
-    - regex: 'Xiaomi_2014501|2014501 Build'
+    - regex: '(?:Xiaomi_)?2014501|2014501(?:[);/ ]|$)'
       model: 'Hongmi 4G'
-    - regex: 'Xiaomi_2014011|2014011 Build'
+    - regex: '(?:Xiaomi_)?2014011|2014011(?:[);/ ]|$)'
       model: 'Hongmi 1S'
-    - regex: 'Xiaomi_201302[23]|201302[23] Build'
+    - regex: '(?:Xiaomi_)?201302[23](?:[);/ ]|$)'
       model: 'Hongmi'
-    - regex: 'Xiaomi_2014818|2014818 Build'
+    - regex: '(?:Xiaomi_)?2014818(?:[);/ ]|$)'
       model: 'Hongmi 2 3G'
-    - regex: 'Xiaomi_2014817|2014817 Build'
+    - regex: '(?:Xiaomi_)?2014817|2014817(?:[);/ ]|$)'
       model: 'Hongmi 2'
-    - regex: 'Xiaomi_201481[123]|201481[123] Build'
+    - regex: '(?:Xiaomi_)?201481[123](?:[);/ ]|$)'
       model: 'Hongmi 2 4G'
     - regex: 'MI[_ ]PLAY(?:[);/ ]|$)'
       model: 'MI Play'
