fix: detection of mobile application version in WeChatShareExtension

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -53,10 +53,10 @@
   version: ''
 
 # WeChat
-- regex: 'MicroMessenger/([^ ]+)'
+- regex: 'MicroMessenger/([^; ]+)'
   name: 'WeChat'
   version: '$1'
-- regex: 'WeChatShareExtensionNew/([^ ]+)'
+- regex: 'WeChatShareExtensionNew/([\d\.]+)'
   name: 'WeChat Share Extension'
   version: '$1'
 
