fix: failed tests -9~
feat(device) detect brand NextBook model: Ares 10 (NEXT1015BAP)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10166,13 +10166,13 @@ Myria:
 
 # M.T.T.
 M.T.T.:
-  regex: 'M.T.T.'
+  regex: 'M\.T\.T\.'
   device: 'smartphone'
   models:
-    - regex: 'M.T.T. ?Tablet([^;/]+)? Build'
+    - regex: 'M.T.T. ?Tablet([^;/]+)?(?: Build|\))'
       device: 'tablet'
       model: 'Tablet$1'
-    - regex: 'M.T.T. ?([^;/]+) Build'
+    - regex: 'M.T.T. ?([^;/]+)(?: Build|\))'
       model: '$1'
 
 # Navon
@@ -10338,6 +10338,8 @@ NextBook:
       model: 'Ares 8'
     - regex: 'NX16A8116K'
       model: 'Ares A8'
+    - regex: 'NEXT1015BAP'
+      model: 'Ares 10'
     - regex: 'NX16A10132S'
       model: 'Ares A10'
     - regex: 'NX16A11264'
@@ -10353,7 +10355,7 @@ NextBook:
     - regex: 'NXM726'
       model: 'Premium 7'
 
-    - regex: 'Next([0-9]+[^;/]+) Build'
+    - regex: 'Next([0-9]+[^);/]+)(?: Build|\))'
       model: 'Next $1'
 
 # ngm
