fix: failed tests -98~

--- a/Tests/fixtures/smartphone-4.yml
+++ b/Tests/fixtures/smartphone-4.yml
@@ -7909,7 +7909,7 @@
   device:
     type: smartphone
     brand: Gionee
-    model: P5 mini
+    model: P5 Mini
   os_family: Android
   browser_family: Chrome
 - 
