--- a/Tests/fixtures/smartphone-8.yml
+++ b/Tests/fixtures/smartphone-8.yml
@@ -391,8 +391,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: Landvo
-    model: S6
+    brand: ""
+    model: ""
   os_family: Android
   browser_family: Chrome
 - 
@@ -409,7 +409,7 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: Landvo
+    brand: iVA
     model: S6
   os_family: Android
   browser_family: Chrome
@@ -8964,5 +8964,113 @@
     type: smartphone
     brand: LYF
     model: Flame 5
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; X1 Selfie) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.149 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 80.0.3987.149
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Lava
+    model: Iris X1 Selfie
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; iNEW v3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.121 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 72.0.3626.121
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: iNew
+    model: v3
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Karbonn Titanium S2 Plus/1.0 Linux/2.6.35.7 Android/4.4.2 Release/03.04.2013 Browser/AppleWebKit533.1
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "533.1"
+  device:
+    type: smartphone
+    brand: Karbonn
+    model: Titanium S2 Plus
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: 'JUC(Linux;U;Android4.4;Zh_cn;Titanium S2 Plus;480*854;)UCWEB7.8.0.95/139/355'
+  os:
+    name: Android
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 7.8.0.95
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Karbonn
+    model: Titanium S2 Plus
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: 'JUC(Linux;U;Android2.3.5;Zh_cn;iNote beyond;480*854;)UCWEB7.8.0.95/139/444'
+  os:
+    name: Android
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 7.8.0.95
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: iTel
+    model: iNote beyond
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; P5 mini) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 79.0.3945.93
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Gionee
+    model: P5 Mini
   os_family: Android
   browser_family: Chrome
