--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5301,10 +5301,10 @@ Etuline:
 
 # Storex
 Storex:
-  regex: "eZee[^a-z]*Tab ?([^);/]*)(?: Build|\))|STOREX LinkBox"
+  regex: 'eZee[^a-z]*Tab|STOREX LinkBox'
   device: 'tablet'
   models:
-    - regex: "eZee[^a-z]*Tab ?([^);/]*)(?: Build|\))"
+    - regex: 'eZee[^a-z]*Tab ?([^);/]*)(?: Build|\))'
       model: "eZee'Tab$1"
     - regex: 'STOREX LinkBox'
       model: 'LinkBox'
