Adds detection for Mageia operating system

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1686,3 +1686,10 @@
     short_name: FYD
     version: ""
     platform: ""
+-
+  user_agent: Mozilla/5.0 (X11; Mageia; Linux x86_64; rv:10.0.9) Gecko/20100101 Firefox/10.0.9
+  os:
+    name: Mageia
+    short_name: MAG
+    version: ""
+    platform: x64
