--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -6,6 +6,13 @@
 ###############
 
 ##########
+# Mageia (https://www.mageia.org/en/)
+##########
+- regex: 'Mageia'
+  name: 'Mageia'
+  version: ''
+
+##########
 # Whale OS (https://www.zeasn.com/)
 ##########
 - regex: '(?:WH|WhaleTV/)(\d+[\.\d]+)'
