--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -8,7 +8,7 @@
 ##########
 # Mageia (https://www.mageia.org/en/)
 ##########
-- regex: 'Mageia'
+- regex: 'Mageia; Linux'
   name: 'Mageia'
   version: ''
 
