Improves x64 platform detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1686,3 +1686,10 @@
     short_name: FYD
     version: ""
     platform: ""
+-
+  user_agent: Mozilla/5.0 (X11; Linux x8664) AppleWebKit/537.36 (KHTML like Gecko) Chrome/36.0.1985.143 Safari/537.36
+  os:
+    name: GNU/Linux
+    short_name: LIN
+    version: ""
+    platform: x64
