feat(device) detect brand LG models: V50S ThinQ (LM-V510N), Q9 One (LM-Q927L), Q92 (LM-Q920N), Q70 (LM-Q730N), G8X ThinQ (LM-G850)
issue #6587

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8800,6 +8800,8 @@ LG:
       model: 'G7 One'
     - regex: 'LM-G820(N|QM[0127]|UMB)?'
       model: 'G8'
+    - regex: 'LM-G850'
+      model: 'G8X ThinQ'
     - regex: 'LM-G810'
       model: 'G8S ThinQ'
     - regex: '901LG(?:[);/ ]|$)'
@@ -8842,6 +8844,8 @@ LG:
       model: 'Q8+'
     - regex: 'LM-Q925L(?:[);/ ]|$)'
       model: 'Q9'
+    - regex: 'LM-Q730N(?:[);/ ]|$)'
+      model: 'Q70'
     - regex: 'LGV33(?:[);/ ]|$)'
       model: 'Qua Phone PX'
     - regex: 'L-03K(?:[);/ ]|$)'
@@ -8913,7 +8917,13 @@ LG:
     - regex: 'LM-V40(?:5|9N)?(?:[);/ ]|$)'
       model: 'V40 ThinQ'
     - regex: 'LM-V500N'
-      model: 'V50'
+      model: 'V50 ThinQ'
+    - regex: 'LM-V510N'
+      model: 'V50S ThinQ'
+    - regex: 'LM-Q920N'
+      model: 'Q92'
+    - regex: 'LM-Q927L'
+      model: 'Q9 One'
     - regex: '(?:LG-)?(?:RS987|H901|H96[0128]|VS990)'
       model: 'V10'
     - regex: 'LG-X240'
