Adds detection for Onyx browser

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,10 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Onyx (https://oregan.net/)
+- regex: 'OreganMediaBrowser(?:/(\d+[\.\d]+))?'
+  name: 'Onyx'
+  version: '$1'
 
 # PlayFree Browser
 - regex: 'PlayFreeBrowser/(?:(\d+[\.\d]+))?'
