--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2831,3 +2831,19 @@
     version: "2.0"
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Unknown; Linux mips) AppleWebkit/536.7 (KHTML, like Gecko) WebShell/1.0.0.0 Safari/536.7 (avvp/ssl; avui/tv; avkb/pc; avrt/html5; avst/off) CE-HTML/1.0 OreganMediaBrowser
+  client:
+    type: browser
+    name: Onyx
+    version: ""
+    engine: WebKit
+    engine_version: "536.7"
+-
+  user_agent: Mozilla/5.0 (avdn/onyx.stb.2010; avui/tv; avvp/ssl; avrt/cehtml; avkb/pc,B:1572866; avst/off; Onyx Windows; U; Windows NT 5.1; xx; rv:1.8.1.13) CE-HTML/1.0 OreganMediaBrowser/4.25.2
+  client:
+    type: browser
+    name: Onyx
+    version: 4.25.2
+    engine: ""
+    engine_version: ""
