Improves iOS version detection and adds detection for Facebook Messenger Lite

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -607,3 +607,19 @@
     model: ""
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: 'LightSpeed [FBAN/MessengerLiteForiOS;FBAV/255.0.0.30.124;FBBV/ 202164847;FBDV/iPhone10,4;FBMD/iPhone;FBSN/iOS;FBSV/ 13.3.1;FBSS/2;FBCR/;FBID/phone;FBLC/en_US;FBOP/0]'
+  os:
+    name: iOS
+    version: 13.3.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook Messenger Lite
+    version: 255.0.0.30.124
+  device:
+    type: smartphone
+    brand: Apple
+    model: iPhone 8
+  os_family: iOS
+  browser_family: Unknown
