--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -512,7 +512,7 @@
   name: 'iOS'
   version: '$1'
 
-- regex: 'FBIOS.*FBSV/(\d+[\.\d]*);'
+- regex: 'FBSN.*FBSV/ ?(\d+[\.\d]*);'
   name: 'iOS'
   version: '$1'
 
