--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,9 +5,9 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
-# Onyx (https://oregan.net/)
+# Oregano Browser (https://oregan.net/)
 - regex: 'OreganMediaBrowser(?:/(\d+[\.\d]+))?'
-  name: 'Onyx'
+  name: 'Oregano Browser'
   version: '$1'
 
 # AwoX (https://www.awox.com.tr/)
