--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,11 +5,6 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
-# Oregano Browser (https://oregan.net/)
-- regex: 'OreganMediaBrowser(?:/(\d+[\.\d]+))?'
-  name: 'Oregano Browser'
-  version: '$1'
-
 # AwoX (https://www.awox.com.tr/)
 - regex: 'AwoX(?:/(\d+[\.\d]+))? Browser'
   name: 'AwoX'
@@ -1785,8 +1780,8 @@
   name: 'Off By One'
   version: ''
 
-#Oregano
-- regex: 'Oregano(?:[ /](\d+[\.\d]+))?'
+#Oregano (https://oregan.net/)
+- regex: '(?:Oregano|OreganMediaBrowser)(?:[ /](\d+[\.\d]+))?'
   name: 'Oregano'
   version: '$1'
 
