Adds detection for Phantom Browser

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,11 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Phantom Browser (https://www.lg.com/)
+- regex: 'Browser/Phantom/V(\d+[\.\d]+)'
+  name: 'Phantom Browser'
+  version: '$1'
+
 # AwoX (https://www.awox.com.tr/)
 - regex: 'AwoX(?:/(\d+[\.\d]+))? Browser'
   name: 'AwoX'
