feat(device) detect brand LG model: WING (LM-F100)
issue #6587

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9018,6 +9018,9 @@ LG:
       model: 'Lancet'
     - regex: 'VS870 4G'
       model: 'Lucid 2'
+    - regex: 'LM-F100'
+      device: 'phablet'
+      model: 'WING'
 
     - regex: 'LGUK410'
       model: 'G Pad 7.0" LTE'
