Adds detection for MacBook Air 13" (2011) and improves detection for Safari browser

--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9272,3 +9272,21 @@
     model: Galaxy S21+ 5G
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: 'Safari/9537.86.7.8 CFNetwork/673.6 Darwin/13.4.0 (x86_64) (MacBookAir2%2C1)'
+  os:
+    name: Mac
+    version: 10.9.5
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: 9537.86.7.8
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air (2009)
+  os_family: Mac
+  browser_family: Safari
