--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -562,6 +562,10 @@ Apple:
       device: 'wearable'
       model: 'Watch Series $1 44mm'
 
+    - regex: 'MacBookAir2%2C1'
+      device: 'desktop'
+      model: 'MacBook Air (2009)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
