Adds detection for MacBook Air 11" (2010)

--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9273,7 +9273,7 @@
   os_family: Android
   browser_family: Chrome
 - 
-  user_agent: 'Safari/9537.86.7.8 CFNetwork/673.6 Darwin/13.4.0 (x86_64) (MacBookAir2%2C1)'
+  user_agent: Safari/9537.86.7.8 CFNetwork/673.6 Darwin/13.4.0 (x86_64) (MacBookAir2%2C1)
   os:
     name: Mac
     version: 10.9.5
@@ -9288,5 +9288,23 @@
     type: desktop
     brand: Apple
     model: MacBook Air (2009)
+  os_family: Mac
+  browser_family: Safari
+- 
+  user_agent: Safari/7537.78.2 CFNetwork/520.5.3 Darwin/11.4.2 (x86_64) (MacBookAir3%2C1)
+  os:
+    name: Mac
+    version: "10.7"
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: 7537.78.2
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 11" (2010)
   os_family: Mac
   browser_family: Safari
