--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -566,6 +566,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Air (2009)'
 
+    - regex: 'MacBookAir3%2C1'
+      device: 'desktop'
+      model: 'MacBook Air 11" (2010)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
