Adds detection for MacBook Air 13" (2010)

--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9308,3 +9308,21 @@
     model: MacBook Air 11" (2010)
   os_family: Mac
   browser_family: Safari
+- 
+  user_agent: Safari/9537.86.7.8 CFNetwork/673.6 Darwin/13.4.0 (x86_64) (MacBookAir3%2C2)
+  os:
+    name: Mac
+    version: 10.9.5
+    platform: x64
+  client:
+    type: browser
+    name: Safari
+    version: 9537.86.7.8
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2010)
+  os_family: Mac
+  browser_family: Safari
