--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -570,6 +570,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Air 11" (2010)'
 
+    - regex: 'MacBookAir3%2C2'
+      device: 'desktop'
+      model: 'MacBook Air 13" (2010)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
