Adds detection for 1Password mobile app

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -271,3 +271,8 @@
   regex: 'Procast/?([\d\.]+)?'
   name: 'Procast'
   version: '$1'
+
+# https://apps.apple.com/mt/app/1password-password-manager/id568903335
+- regex: '1PasswordThumbs/([\d\.]+)'
+  name: '1Password'
+  version: '$1'
