Adds detection for MacBook Air 11" (2011)

--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9326,3 +9326,19 @@
     model: MacBook Air 13" (2010)
   os_family: Mac
   browser_family: Safari
+- 
+  user_agent: 1PasswordThumbs/1 CFNetwork/596.5 Darwin/12.5.0 (x86_64) (MacBookAir4%2C1)
+  os:
+    name: Mac
+    version: 10.8.5
+    platform: x64
+  client:
+    type: mobile app
+    name: 1Password
+    version: "1"
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 11" (2011)
+  os_family: Mac
+  browser_family: Unknown
