--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -275,3 +275,9 @@
     type: mobile app
     name: Kik
     version: 15.15.0.21560
+-
+  user_agent: 1PasswordThumbs/1 CFNetwork/596.5 Darwin/12.5.0 (x86_64) (MacBookAir4%2C1)
+  client:
+    type: mobile app
+    name: 1Password
+    version: "1"
