Adds detection for MacBook Air 11" (2012)

--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9343,7 +9343,7 @@
   os_family: Mac
   browser_family: Unknown
 - 
-  user_agent: '1PasswordThumbs/1 CFNetwork/596.5 Darwin/12.5.0 (x86_64) (MacBookAir4%2C2)'
+  user_agent: 1PasswordThumbs/1 CFNetwork/596.5 Darwin/12.5.0 (x86_64) (MacBookAir4%2C2)
   os:
     name: Mac
     version: 10.8.5
@@ -9356,5 +9356,21 @@
     type: desktop
     brand: Apple
     model: MacBook Air 13" (2011)
+  os_family: Mac
+  browser_family: Unknown
+- 
+  user_agent: 1PasswordThumbs/1 CFNetwork/596.4.3 Darwin/12.4.0 (x86_64) (MacBookAir5%2C1)
+  os:
+    name: Mac
+    version: 10.8.4
+    platform: x64
+  client:
+    type: mobile app
+    name: 1Password
+    version: "1"
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 11" (2012)
   os_family: Mac
   browser_family: Unknown
