Adds detection for MacBook Air 13" (2012)

--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9374,3 +9374,19 @@
     model: MacBook Air 11" (2012)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: 1PasswordThumbs/1 CFNetwork/520.5.1 Darwin/11.4.2 (x86_64) (MacBookAir5%2C2)
+  os:
+    name: Mac
+    version: "10.7"
+    platform: x64
+  client:
+    type: mobile app
+    name: 1Password
+    version: "1"
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Air 13" (2012)
+  os_family: Mac
+  browser_family: Unknown
