--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -586,6 +586,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Air 11" (2012)'
 
+    - regex: 'MacBookAir5%2C2'
+      device: 'desktop'
+      model: 'MacBook Air 13" (2012)'
+
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
       model: 'iPhone'
